work with misteik

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 							alt="advantage-1"
 						/>
                         </div>
-                        <h5 class="advantage-title">Таможенное оформление груза</h5>
+                        <h5 class="advanage-title">Таможенное оформление груза</h5>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -224,7 +224,7 @@
 							alt="advantage-2"
 						/>
                         </div>
-                        <h5 class="advantage-title">Страховка груза</h5>
+                        <h5 class="advanage-title">Страховка груза</h5>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -236,7 +236,7 @@
 							alt="advantage-3"
 						/>
                         </div>
-                        <h5 class="advantage-title">Проверка товара на брак</h5>
+                        <h5 class="advanage-title">Проверка товара на брак</h5>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -248,7 +248,7 @@
 							alt="advantage-4"
 						/>
                         </div>
-                        <h5 class="advantage-title">Доставка в любой город Украины</h5>
+                        <h5 class="advanage-title">Доставка в любой город Украины</h5>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -260,7 +260,7 @@
 							alt="advantage-5"
 						/>
                         </div>
-                        <h5 class="advantage-title">Консолидация на складе</h5>
+                        <h5 class="advanage-title">Консолидация на складе</h5>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -272,7 +272,7 @@
 							alt="advantage-6"
 						/>
                         </div>
-                        <h5 class="advantage-title">Ответственное хранение груза</h5>
+                        <h5 class="advanage-title">Ответственное хранение груза</h5>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -284,7 +284,7 @@
 							alt="advantage-7"
 						/>
                         </div>
-                        <h5 class="advantage-title">Помощь воплате товара</h5>
+                        <h5 class="advanage-title">Помощь воплате товара</h5>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -296,7 +296,7 @@
 							alt="advantage-8"
 						/>
                         </div>
-                        <h5 class="advantage-title">Упаковка, переупаковка</h5>
+                        <h5 class="advanage-title">Упаковка, переупаковка</h5>
                     </div>
                 </div>
             </div>
