--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
-<body></body>
-
 </html>
 <header>
     <div class="container">
@@ -175,7 +173,7 @@
                         <div class="col-lg-12">
                             <div class="input-box">
                                 <div id="file-name"></div>
-                                <label for="fileInput">Загрузите фото товара</label>
+                                <label for="fileInput">Загрузить фото товара</label>
                                 <input type="file" id="fileInput" name="fileInput" />
                             </div>
                         </div>
@@ -194,6 +192,13 @@
                         </div>
                     </div>
                 </form>
+                <div class="calculation-decoration">
+                    <img
+					src="/assets/img/calculate-man.png"
+					class="img-fluid"
+					alt="calculation-decoration"
+				/>
+                </div>
             </div>
         </div>
     </section>
@@ -297,6 +302,249 @@
 						/>
                         </div>
                         <h5 class="advanage-title">Упаковка, переупаковка</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="delivery">
+        <div class="container">
+            <div class="template-title">
+                <h2>Варианты доставки грузов из Китая</h2>
+            </div>
+            <div class="carousel-template">
+                <div class="slide-item">
+                    <div class="card">
+                        <div class="card-img-box">
+                            <img src="assets/img/deliver-1.png" class="img-fluid" alt="services-1">
+                        </div>
+                        <h4 class="card-title">Авто - обычная</h4>
+                        <div class="card-options">
+                            <div class="card-options-item">
+                                <img src="assets/img/deliver-icon-calendar.svg" alt="icon-calendar">
+
+                            9-21 дней
+                            </div>
+                            <div class="card-options-item">
+                                <img src="assets/img/deliver-icon-bag.svg" alt="icon-box">
+
+                            от 15 кг
+                            </div>
+                        </div>
+                        <div class="card-price">
+                            <span>от</span>
+                            <strong>2,5</strong>
+                            <span>$/кг</span>
+                        </div>
+                        <div class="btn-row">
+                            <button type="button" class="btn btn-primary">Оставить заявку</button>
+                            <button type="button" class="btn btn-secondary">Подробнее</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide-item">
+                    <div class="card">
+                        <div class="card-img-box">
+                            <img src="assets/img/deliver-2.png" class="img-fluid" alt="services-2">
+                        </div>
+                        <h4 class="card-title">Авто - Ускоренная</h4>
+                        <div class="card-options">
+                            <div class="card-options-item">
+                                <img src="assets/img/deliver-icon-calendar.svg" alt="icon-calendar">
+
+                            9-21 дней
+                            </div>
+                            <div class="card-options-item">
+                                <img src="assets/img/deliver-icon-bag.svg" alt="icon-box">
+
+                            от 15 кг
+                            </div>
+                        </div>
+                        <div class="card-price">
+                            <span>от</span>
+                            <strong>3,5</strong>
+                            <span>$/кг</span>
+                        </div>
+                        <div class="btn-row">
+                            <button type="button" class="btn btn-primary">Оставить заявку</button>
+                            <button type="button" class="btn btn-secondary">Подробнее</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide-item">
+                    <div class="card">
+                        <div class="card-img-box">
+                            <img src="assets/img/deliver-3.png" class="img-fluid" alt="services-3">
+                        </div>
+                        <h4 class="card-title">ЖД</h4>
+                        <div class="card-options">
+                            <div class="card-options-item">
+                                <img src="assets/img/deliver-icon-calendar.svg" alt="icon-calendar">
+
+                            9-21 дней
+                            </div>
+                            <div class="card-options-item">
+                                <img src="assets/img/deliver-icon-bag.svg" alt="icon-box">
+
+                            от 15 кг
+                            </div>
+                        </div>
+                        <div class="card-price">
+                            <span>от</span>
+                            <strong>1,5</strong>
+                            <span>$/кг</span>
+                        </div>
+                        <div class="btn-row">
+                            <button type="button" class="btn btn-primary">Оставить заявку</button>
+                            <button type="button" class="btn btn-secondary">Подробнее</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide-item">
+                    <div class="card">
+                        <div class="card-img-box">
+                            <img src="assets/img/deliver-4.png" class="img-fluid" alt="services-4">
+                        </div>
+                        <h4 class="card-title">Авиа</h4>
+                        <div class="card-options">
+                            <div class="card-options-item">
+                                <img src="assets/img/deliver-icon-calendar.svg" alt="icon-calendar">
+
+                            9-21 дней
+                            </div>
+                            <div class="card-options-item">
+                                <img src="assets/img/deliver-icon-bag.svg" alt="icon-box">
+
+                            от 15 кг
+                            </div>
+                        </div>
+                        <div class="card-price">
+                            <span>от</span>
+                            <strong>2,5</strong>
+                            <span>$/кг</span>
+                        </div>
+                        <div class="btn-row">
+                            <button type="button" class="btn btn-primary">Оставить заявку</button>
+                            <button type="button" class="btn btn-secondary">Подробнее</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide-item">
+                    <div class="card">
+                        <div class="card-img-box">
+                            <img src="assets/img/deliver-5.png" class="img-fluid" alt="services-5">
+                        </div>
+                        <h4 class="card-title">Морская</h4>
+                        <div class="card-options">
+                            <div class="card-options-item">
+                                <img src="assets/img/deliver-icon-calendar.svg" alt="icon-calendar">
+
+                            9-21 дней
+                            </div>
+                            <div class="card-options-item">
+                                <img src="assets/img/deliver-icon-bag.svg" alt="icon-box">
+
+                            от 15 кг
+                            </div>
+                        </div>
+                        <div class="card-price">
+                            <span>от</span>
+                            <strong>2,5</strong>
+                            <span>$/кг</span>
+                        </div>
+                        <div class="btn-row">
+                            <button type="button" class="btn btn-primary">Оставить заявку</button>
+                            <button type="button" class="btn btn-secondary">Подробнее</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section class="services container-fluid">
+        <div class="container">
+            <div class="template-title">
+                <h2>Услуги</h2>
+            </div>
+            <div class="carousel-template">
+                <div class="slide-item">
+                    <div class="card">
+                        <div class="card-img-box">
+                            <img
+							src="assets/img/service-1.png"
+							class="img-fluid"
+							alt="services-1"
+						/>
+                        </div>
+                        <h4 class="card-title">Выкуп товара</h4>
+                        <div class="card-description">
+                            Компания - это полный комплекс логистических услуг по доставке
+                            грузов из Китая в Украину - сборные грузы и цельные товарные партии,
+                            услуги посредника ТаоБао, КАРГО Китай-Украина.
+                        </div>
+                        <div class="btn-row">
+                            <button type="button" class="btn btn-secondary">Подробнее</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide-item">
+                    <div class="card">
+                        <div class="card-img-box">
+                            <img
+							src="assets/img/service-2.png"
+							class="img-fluid"
+							alt="services-2"
+						/>
+                        </div>
+                        <h4 class="card-title">Страховка груза</h4>
+                        <div class="card-description">
+                            Компания - это полный комплекс логистических услуг по доставке
+                            грузов из Китая в Украину - сборные грузы и цельные товарные партии,
+                            услуги посредника ТаоБао, КАРГО Китай-Украина.
+                        </div>
+                        <div class="btn-row">
+                            <button type="button" class="btn btn-secondary">Подробнее</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide-item">
+                    <div class="card">
+                        <div class="card-img-box">
+                            <img
+							src="assets/img/service-3.png"
+							class="img-fluid"
+							alt="services-3"
+						/>
+                        </div>
+                        <h4 class="card-title">Аренда склада</h4>
+                        <div class="card-description">
+                            Компания - это полный комплекс логистических услуг по доставке
+                            грузов из Китая в Украину - сборные грузы и цельные товарные партии,
+                            услуги посредника ТаоБао, КАРГО Китай-Украина.
+                        </div>
+                        <div class="btn-row">
+                            <button type="button" class="btn btn-secondary">Подробнее</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide-item">
+                    <div class="card">
+                        <div class="card-img-box">
+                            <img
+							src="assets/img/service-4.png"
+							class="img-fluid"
+							alt="services-4"
+						/>
+                        </div>
+                        <h4 class="card-title">Перевод денежных средств</h4>
+                        <div class="card-description">
+                            Компания - это полный комплекс логистических услуг по доставке
+                            грузов из Китая в Украину - сборные грузы и цельные товарные партии,
+                            услуги посредника ТаоБао, КАРГО Китай-Украина.
+                        </div>
+                        <div class="btn-row">
+                            <button type="button" class="btn btn-secondary">Подробнее</button>
+                        </div>
                     </div>
                 </div>
             </div>
